Have PROFILE route working.
